force-app/main/default/objects/History_Stock_Product_Detail__c/History_Stock_Product_Detail__c.object-meta.xml
<CustomObject>
    <label>History Stock Product Detail</label>
    <nameField>
        <label>History Stock Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>History Stock Product Detail</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>