force-app/main/default/objects/History_Stock_Product_Detail__c/fields/History_Stock_Product__c.field-meta.xml
<CustomField>
    <fullName>History_Stock_Product__c</fullName>
    <label>History Stock Product</label>
    <referenceTo>History_Stock_Product__c</referenceTo>
    <relationshipLabel>History Stock Product Detail</relationshipLabel>
    <relationshipName>History_Stock_Product_Detail</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>