force-app/main/default/objects/History_Stock_Product_Detail__c/fields/Stock_In__c.field-meta.xml
<CustomField>
    <fullName>Stock_In__c</fullName>
    <label>Stock In</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>